kubernetes/mlflow/mlflow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v3.8.1
          ports:
            - containerPort: 5000
          command: ["mlflow"]
          args:
            - server
            - --host=0.0.0.0
            - --port=5000
            - --backend-store-uri=file:///mlruns
            - --default-artifact-root=file:///mlruns
            - --allowed-hosts
            - "*"
            - --uvicorn-opts
            - "--proxy-headers --forwarded-allow-ips=*"
          volumeMounts:
            - name: mlflow-data
              mountPath: /mlruns
      volumes:
        - name: mlflow-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: mlflow
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
