kubernetes/mlflow/mlflow-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: mlflow
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow.157.230.198.229.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
